# Pari_final

./: CMakeLists.txt  README.md  arrows.glade
src/: a.out  client.c  client.c~  myclient.h  myf.c  myf.c~  newclient.c~  prototypes.h  test_arduino.c
